# RaytracingWindowsTriangles

./: BaseModel.cpp  BaseModel.h  CMakeLists.txt  README.md  Scene.cpp  Scene.h  cube.txt  dragon8K.txt  knight.txt  main.cpp  suzanne.txt
shaders/: display.frag  fullscreen.frag  fullscreen.vert
